<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_settings"
            android:textSize="42sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- ROW 0: Map Size -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_mapSize"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:layout_gravity="fill"
            android:layout_row="0"
            android:layout_column="0" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sl_mapSize"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:stepSize="1"
            android:valueFrom="3"
            android:valueTo="8" />

        <!-- ROW 1: Map Size -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_connect"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:layout_column="0" />

        <com.google.android.material.slider.Slider
            android:id="@+id/sl_connect"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:stepSize="1"
            android:valueFrom="3"
            android:valueTo="5" />

        <!-- ROW 2: Save -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_submit"
            android:text="@string/btn_saveSettings"
            android:textSize="32sp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill" />
    </GridLayout>

</LinearLayout>